--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775166.md#1" target="_blank">周晓辉：习近平警告王沪宁 断舍离是根本</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775166.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wang-1-1-1-1-150x120.jpg" align ="left"></a>而习近平若想摆脱当下困境，不妨学习下生活中的“断舍离”，那就是在思想上切断与中共的关联，舍弃不切实际的意图通过保党而保权力的想法，离开那些误导其的奸臣。倘如是，或许还有一线生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774385.md#1" target="_blank">横河：从萨斯到武汉肺炎面面观</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/henhe1-600x400-1-1-150x120.jpg" align ="left"></a>武汉肺炎是不是萨斯卷土重来？当局应对和萨斯相比有无不同。当局在隐瞒什么？抓捕“散布谣言者”是要垄断谣言发布权还是阻止真相？究竟谁的谣言危害更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 9:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774233.md#1" target="_blank">张林：北京风声鹤唳 草木皆兵</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003040429571462-150x120.jpg" align ="left"></a>伊朗第二号实权人物苏里曼尼被美军斩首后，全世界极权主义者普遍惊慌失措。而其中最胆战心惊的，莫过于胆小如鼠的中共头目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773398.md#1" target="_blank">王友群：苏莱曼尼被斩首中共将如何动作</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C5-600x400-1-1-150x120.jpg" align ="left"></a>1月3日，伊朗第二号人物苏莱曼尼在离开巴格达机场时，被美国“死神”无人机发射的3枚“地狱火”导弹击毙，同时被炸身亡的还有伊朗支持的伊拉克民兵组织“人民动员”副司令穆罕迪斯等7人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780962.md#1" target="_blank">李小刚：脑控原理之DNA共振</a><br></h3>目前所说的脑控武器其实早已诞生，并且一直在使用和不断的完善，要了解脑控的原理，就必须提到共振，因为脑控原理中包括了大脑共振和DNA共振。本文将主要对于DNA共振作以分析和探究。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780866.md#1" target="_blank">李清：习近平的唯一出路是解体中共</a><br></h3>宗教和预言对人类极为重要。有关人类最重要的事情在宗教和预言中都讲了。这里只提及诸葛亮的《马前课》。《马前课》共有十四课，每一课代表一个朝代，预言了中国的历史，其准确度惊人。
 
 预言如此准确，我们可以这样理解，历史其实就是安排好的一场戏，在一幕幕的上演。从预言的精准无误，我们也可以说一切皆有定数。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:30 AM			</td></tr>
