--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/21/n11737612.md#1" target="_blank">【历史回眸】苏联解体：枪杆子保不了政权</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/21/n11737612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1991_coup_attempt1-150x120.jpg" align ="left"></a>苏联解体前，有一则关于克格勃的笑话。公共汽车上，一位乘客对着一个身材高大的人说：“先生，您目前为祖国的克格勃服务吗？”对方回答：“没有。”乘客接着问：“那您有亲人为克格勃服务吗？”回答：“也没有。”乘客还是堆满笑容地问：“那您有要好的朋友为克格勃服务吗？”对方还是回答“没有”。乘客突然变脸：“请把臭脚挪开，你踩着我了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/22/n11739000.md#1" target="_blank">现代占星学解析习近平出生盘及其性格真相</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/22/n11739000.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>习的生日在双子座第三区间，在数字学中人格生命数字是 39/3、对应塔罗牌小阿克纳系列圣杯骑士逆位，生命数为3。这样的人一般只能听歌功颂德的话和赞美崇拜的话，这也是他大搞个人崇拜的原因。这样的人不能听一点批评的话的；一点点批评对这样的人来说简直是可以记恨一辈子的，而且习近平是属蛇的，属蛇的人最擅长记仇和报复。当然属蛇的人.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747215.md#1" target="_blank">浮生行吟：争什么</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/spring-276014_1920-150x120.jpg" align ="left"></a>心情与自生自长的春草一样悠闲自适，是非、名利的纷扰变得若有若无，何等安然、自在！况且争输赢、分胜负又如何？找出对策、解决问题，才是正途。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739453.md#1" target="_blank">文学的理由</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1312310359411848-150x120.jpg" align ="left"></a>文学作品之超越国界，通过翻译又超越语种，进而越过地域和历史形成的某些特定的社会习俗和人际关系，深深透出的人性乃是人类普遍相通的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/29/n11753300.md#1" target="_blank">歌词：我与自己有个约定</a><br></h3> 那一世我没能修成，我与自己有个约定。 等婆罗花开的时候，我要重修佛法寻圣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11749650.md#1" target="_blank">唐浩：选战有道</a><br></h3>正邪搏斗争宝岛   红浪败沉一面倒   乱中有序浊恶拂   秋去春来显真道......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751526.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》</a><br></h3>珠玉无遗遍海东，匡时鉴古继唐风， 江河不废传三百，典律先贤砥柱功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11749461.md#1" target="_blank">唐浩：忧神州</a><br></h3>秋雨绵绵故绪浓   落枫片片载千愁   霾封中原惑难醒   遥望故土寒心忧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
