--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,6 +10,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785916.md#1">颜丹： 中共开“科技奖励大会”是自娱自乐</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785937.md#1">王友群：蔡英文胜选的六大原因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785931.md#1">海风：蔡英文连任 北京“帮了大忙”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785255.md#1">朱同：文斗武斗都是斗</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785090.md#1">王友群：刘鹤终于要来美国签协议了</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783854.md#1">王赫：中共政局——三病缠身 死前丧智</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783273.md#1">丹丹：关于香港“明日大屿愿景”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783244.md#1">颜丹：“17人未脱贫”假在哪儿？</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771208.md#1">李子柒背后的“中国故事”</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777568.md#1">王立强遭死亡威胁 被要求撤回对中共指控</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786479.md#1">警告伊朗勿屠杀抗议人民 川普：全球都在看</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786421.md#1">加拿大检察官：孟晚舟案符合引渡至美国原则</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786305.md#1">李中泠：武汉肺炎疫情恐遭隐瞒 国人如何自保？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786081.md#1">周晓辉：台湾香港选举结果告诉习近平一件事</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786070.md#1">防堵学术间谍 美ICE加强调查国际学生</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781491.md#1">【独家】专访郑文杰：惨痛经历 理解法轮功（六）</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785889.md#1">蔡英文连任 美媒：应感谢北京的愚蠢</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785937.md#1">王友群：蔡英文胜选的六大原因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786268.md#1">英美加欧日政要和各界贺蔡英文 赞台湾民主</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785895.md#1">伊朗击毁乌航客机 数千人游行要求领袖下台</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785709.md#1">陆医院“先安检后看病” 医患冲突再受关注</a><br>
