--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786644.md#1">夏小强：台湾选举蔡英文获压倒性胜利 意义重大</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785916.md#1">颜丹： 中共开“科技奖励大会”是自娱自乐</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785937.md#1">王友群：蔡英文胜选的六大原因</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785931.md#1">海风：蔡英文连任 北京“帮了大忙”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783651.md#1">【名家专栏】川普的全国讲话恰如其分</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783854.md#1">王赫：中共政局——三病缠身 死前丧智</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783273.md#1">丹丹：关于香港“明日大屿愿景”</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783382.md#1">周晓辉：习近平失豪情身边聚庸才 路在哪里？</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11771208.md#1">李子柒背后的“中国故事”</a><br>
