--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -20,7 +20,7 @@
 
 先是川普总统感恩节前一天签署了《香港人权与民主法案》，之后，美国国防部罕见公开驻韩美军与韩军针对朝鲜高层的“斩首行动”训练的画面，转过年来第三天，美军空袭就把伊朗二号人物、恐怖分子组织首脑给斩首了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11768923.md#1" target="_blank">海风：林郑月娥将走到尽头</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11768923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1906090248211366-600x400-150x120.jpg" align ="left"></a>中联办主任王志民被下课了。这意味着港府管理班子将很快就要面临一场大换血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:31 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11773537.md#1" target="_blank">向真：好人无辜被杀 恶徒猖狂难久</a><br></h3>据明慧网报导统计，二零一九年有96名法轮功学员在迫害中含冤离世，其中有国家公务员、专家、科技人员、学校校长、优秀教师、警察、军队转业干部、医生、医院院长、厂长等社会精英人士。从这么多的善良公民无辜遭国家机器迫害致死的事实，人们看到了中共草菅人命的邪恶本性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank">【名家专栏】仇恨会害死自己</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11768318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1188049966-webcrop-1200x720-150x120.jpg" align ="left"></a>最近在新泽西州泽西城（Jersey City）的一家犹太洁食超市所发生的枪击事件，是我们美国人正在因为憎恨邻居而杀死自己的最新例子之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773300.md#1" target="_blank">文静：并非“上面政策是好的，下面执行搞坏了”</a><br></h3>“上面政策是好的，下面执行搞坏了”这话不是自欺欺人就是看不清中共的邪恶，就此小议一下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 8:44 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773255.md#1" target="_blank">吕锡民：建筑节能供气系统概述</a><br></h3>人们大约有90％的时间待在室内空间。建筑通风和新鲜空气供应可以改善室内空气品质，另外SBS和SARS的潜在爆发已成人们关注焦点。根据统计数据，人们吸入新鲜空气约有400ppm二氧化碳浓度，而呼出废气则具有40,000ppm二氧化碳浓度，这显示CO2是室内空间最首要减少的污染物之一。为了保持室内良好空气品质，许多国家制定.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11773166.md#1" target="_blank">项云：无视人性准则是中共党性决定的</a><br></h3>安居乐业天然拒绝暴力生活是人本性的自然追求，由此产生的丰富多彩文化和娱乐也是自然而然；由此生产和生活中发生的各种人际关系规则也必然要相互共识，普世价值也必是人性光辉体现。所以信守各种承诺也是人性自然体现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:27 AM			</td></tr>
