--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -40,8 +40,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787705.md#1">组图：台立委参选人谢票行程 拥抱与感谢</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786567.md#1">神韵辉映欧洲最古老剧院 精英感恩神性内涵</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787716.md#1">“神韵到来是应普庆的盛事” 圣荷西大爆满</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787744.md#1">国民党败选 学者：改亲中反共才有胜算</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787669.md#1">【直播回放】3.6万人参加爱丁堡广场集会</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786354.md#1">新观测发现邻近宇宙膨胀更快 科学家惊讶</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787227.md#1">美中签约后 三大因素或使中共承诺成空</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787408.md#1">蔡英文胜选 法专家：国际社会应守护台湾民主</a><br>
