--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788195.md#1">中共官媒否认伊朗击落客机 闹国际笑话</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788179.md#1">批中共不可靠 布拉格将与台北缔结姊妹城市</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788171.md#1">港媒聚焦蔡英文高票连任的“香港因素”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788163.md#1">遭港府拒绝入境 人权观察执行长现场直播</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786567.md#1">神韵辉映欧洲最古老剧院 精英感恩神性内涵</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787716.md#1">“神韵到来是应普庆的盛事” 圣荷西大爆满</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787744.md#1">国民党败选 学者：改亲中反共才有胜算</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787669.md#1">【直播回放】3.6万人参加爱丁堡广场集会</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788182.md#1">陆企2019境外债违约36亿美元  今年或更多</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787227.md#1">美中签约后 三大因素或使中共承诺成空</a><br>
